@@ -2,6 +2,7 @@
 
 	* Added a class to generate and check API keys for use with the REST API
 	* Added an API key check for the REST API
+	* Added tx_solr_ConnectionManager::getConfigurationsBySite()
 
 2012-02-14  Ingo Renner  <ingo.renner@dkd.de>
 
